--- a/core/static/css/login.css
+++ b/core/static/css/login.css
@@ -1,6 +1,3 @@
-* {
-	box-sizing: border-box;
-}
 section {
 	display: flex;
 	flex-wrap: wrap;
@@ -16,22 +13,19 @@ form {
     	background-color: #ddd;
     	border-radius: 15px;
 }
-button:hover {
-	box-shadow: 0 5px 5px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-/*.classe {
+.classe {
 	width: 20%;
 	padding: 5px 15px;
 	border-radius: 7px;
 	border-color: #0055cc #0055cc #003580;
 	background-image: -webkit-linear-gradient(top, #0088cc, #0055cc);
-    	background-color: #0074cc;
-    	color: #ffffff;
-    	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    background-color: #0074cc;
+    color: #ffffff;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
 .flexForm {
 	justify-content: center;
-}*/
+}
 .itens {
 	display: flex;
 	justify-content: space-between;
