--- a/core/templates/area_aluno.html
+++ b/core/templates/area_aluno.html
@@ -6,7 +6,24 @@
 
 {% block script_unico %}{% endblock %}
 	   
-{% block title %}Faculdade Impacta - Home{% endblock %}
+{% block title %}Area do aluno{% endblock %}
 
 {% block main %}
+<section class="areaAluno">
+    <div class="listLinks">
+        <ul>
+            <li class="liLink"><a class="liLink" href="mensagem.html">Mensagens</a></li>
+            <li class="liLink"><a class="liLink"href="#">Trabalhos</a></li>
+            <li class="liLink"><a class="liLink"href="#">Exercícios</a></li>
+        </ul>
+    </div>
+
+    <div class="msgPanel">
+        <div class="msg">
+            <p class="remetente">{{ user.nome }}</p>
+            <p id="texto">mensagem modelo trolololololo</p>
+            <span id="data">{{ data_agora }}</span>
+        </div>
+    </div>
+</section>
 {% endblock %}
