criação da pagina de matricula (imcompleto), e alterções/remoção de código nos arquivos necessários

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -11,6 +11,7 @@
 	<script src="{% static '/' %}src/site.js"></script>
 	<script src="{% block script_unico %}{% endblock %}"></script>
 	<title>{% block title %}{% endblock %}</title>
+	<script>check_codigo()</script>
 </head>
 
 <body>
