--- a/core/templates/matricula.html
+++ b/core/templates/matricula.html
@@ -3,7 +3,7 @@
 
 {% block estilo_unico %}{% static '/' %}css/matricula.css{% endblock %}
 
-{% block script_unico %}static/js/matricula.js{% endblock %}
+{% block script_unico %}static/src/matricula.js{% endblock %}
 
 {% block login %}{% endblock %}
 
