--- a/core/templates/matricula.html
+++ b/core/templates/matricula.html
@@ -12,17 +12,22 @@
 {% block title %}Faculdade Impacta - Matricula{% endblock %}
 
 {% block main %}
-    <var class="flag">F</var>
-    {% if flag == 'T' %}
-        <section>
-		    </br>
-		    <p>Codigo Válido</p> 
-            </br>
-    {% else %}
-        <section>
-           </br>
-            <p>Codigo Inválido</p> 
-            </br>
+ 		<article class = "mat">
+			<h1 class = "mat">Matrícula</h1>
+		</article>
+<form action="novoAluno" method = "POST">
+            <label for="nomeCompleto">Nome Completo</label>:<br>
+            <input type="text" name="nomeCompleto" id="nomeCompleto"><br>
+            <label for="celular">Celular</label>:<br>
+            <input type="text" name="celular" id="celular"><br>
+            <label for="email">E-mail</label>:<br>
+            <input type="email" name="email" id="email"><br>
+            <button type="button">Alterar</button>
+            <button type="button">Enviar</button>
+</form>
+ 
+        
+	</section>
     {% endif %}
 {% endblock %}
 
