Como acessar o server pelo SQLSERVER

--- a/core/templates/matricula.html
+++ b/core/templates/matricula.html
@@ -21,7 +21,8 @@
     {% else %}
         <section>
            </br>
-            <p>Codigo Inválido</p> 
+           
+            <p id='bla'>{{ user.nome }}</p> 
             </br>
     {% endif %}
 {% endblock %}
