--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -13,57 +13,52 @@
 	<title>{% block title %}{% endblock %}</title>
 </head>
 
-<body>
-	<header>
-		<div class="motherNav">
-			<nav class="menu">
+<body class="content">
+	<header class="motherNav">
+		<nav class="menu">
+			<div class="menus">
 				<a href="/" title="Logo Faculdade Impacta">
 					<img class="img_logo" src="{% static '/' %}img/logo-novo.png" alt="Logo e link para a home" />
 				</a>
-				<div class="linkBtn"><a class="link" href="cursos.html" title="Cursos">Cursos</a></div>
-				<div class="linkBtn"><a class="link" href="noticias.html" title="Notícias">Notícias</a></div>
-				<div class="containerLogin">
-					{% if not user.is_authenticated %}
-					<button class="user" title="{% if not user.is_authenticated %}Entre{% else %}Logado{% endif %}">
-						<a href="login.html">
-							<img class="img_user" src="{% if not user.is_athenticated %}{% static '/' %}img/img_user.png{% else %}{% static '/' %}img/img_user.png{% endif %}"
+				<nav class="menu_extenco">
+					<a class="link" href="cursos.html" title="Cursos"><button class="linkBtn">Cursos</button></a>
+					<a class="link" href="noticias.html" title="Notícias"><button class="linkBtn">Notícias</button></a>
+				</nav>
+			</div>
+			<div class="menus">
+				{% if not user.is_authenticated %}
+				<button class="user" title="{% if not user.is_authenticated %}Entre{% else %}Logado{% endif %}">
+					<a href="login.html">
+						<img class="img_user" src="{% if not user.is_athenticated %}{% static '/' %}img/img_user.png{% else %}{% static '/' %}img/img_user.png{% endif %}"
 						 	alt="Usuario" />
-						</a>
-					</button> {% else %}
-					<div class="drop_login">
-						<button class="user" onclick="login_function()" title="{% if not user.is_athenticated %}Entre{% else %}Logado{% endif %}">
-							<img class="img_user" src="{% if logado == False %}{% static '/' %}img/img_user.png{% else %}{% static '/' %}img/img_user.png{% endif %}" alt="Usuario" />
-						</button>
-						<div id="drop_login" class="conteudo_login">
-							{% if user.user_type == 'A' %}
-							<a href='area_aluno.html'>Área do aluno</a>
-							<a href="/logout">Sair</a>
-							{% elif user.user_type == 'P' %}
-							<a href='area_professor.html'>Área do professor</a>
-							<a href="/logout">Sair</a>
-							{% endif %}
-					{% endif %}		
-
-							<!--<form class="flexForm" method="POST">
-								{% csrf_token %}
-								<div class="inputGroup">
-									<label for="ra">RA: </label>
-									<input id="ra" class="informs" name="ra" required/>
-								</div>
-								<div class="inputGroup">
-									<label for="senha" required>Senha: </label>
-									<input id="senha" class="informs" name="senha" type="password" required/>
-								</div>
-								<button class="btnLogin" type="submit">Enviar</button>
-								<a class="formLogin" href="#Esqueci_a_senha">Esqueci a senha.</a>
-							</form>-->
-						</div>
-					</div>
+					</a>
+				</button> {% else %}
+				<div>
+					<button class="user" onclick="login_function()" title="{% if not user.is_athenticated %}Entre{% else %}Logado{% endif %}">
+						<img class="img_user" src="{% if logado == False %}{% static '/' %}img/img_user.png{% else %}{% static '/' %}img/img_user.png{% endif %}" alt="Usuario" />
+					</button>
+					<nav id="drop_login" class="conteudo_login">
+						{% if user.user_type == 'A' %}
+						<a href='area_aluno.html'>Área do aluno</a>
+						<a href="/logout">Sair</a> {% elif user.user_type == 'P' %}
+						<a href='area_professor.html'>Área do professor</a>
+						<a href="/logout">Sair</a> {% endif %}
+					</nav>
 				</div>
-			</nav>
-		</div>
+				{% endif %}
+				<div class="drop_menu" title="Menu">
+					<button onclick="menu_function()" class="dropbtn">
+						<img src="{% static '/' %}img/menu_icons_bars.png" class="menu_icon" />
+					</button>
+					<nav id="drop" class="conteudo_menu">
+						<a href="cursos.html" title="Cursos">Cursos</a>
+						<a href="noticias.html" title="Notícias">Notícias</a>
+					</nav>
+				</div>
+			</div>
+		</nav>
 	</header>
-	<main>
+	<main class="content">
 		{% block main %}{% endblock %}
 	</main>
 	<footer>
