--- a/core/static/css/site.css
+++ b/core/static/css/site.css
@@ -8,7 +8,11 @@ html {
 }
 
 .content{
+	display:flex;
+	flex-flow: column wrap;
+	align-items: center;
 	margin-top:1.1em;
+	width:98%;
 }
 
 .corpo {
@@ -47,7 +51,7 @@ html {
 	display: flex;
 	justify-content: center;
 	height:100%;
-	width:9em;
+	width:10em;
 	color: #FFFFFF;
 	font-weight: bold;
 	background-color: #2a3c4a;
@@ -66,8 +70,7 @@ html {
 a.link {
 	display: flex;
 	text-decoration: none;
-	margin-top: 1.3em;
-	margin-bottom: 1em;
+	height: 100%;
 	font-weight: bold;
 }
 a.link:link, a.link:visited {
@@ -82,6 +85,7 @@ a.link:active {
 
 .menus, .menu_extenco{
 	display: flex;
+	flex-flow: row;
 	justify-content: space-between;
 }
 
@@ -103,7 +107,7 @@ a.link:active {
 	position: relative;
 	flex-flow: column;
 	width:100%;
-	background-color: rgb(0,0,0,0);	
+	background-color: rgba(0, 0, 0, 0);	
 }
 .user{
 	display: flex;
@@ -127,11 +131,29 @@ a.link:active {
 	background-color: #4e5b60;
 	width:100%;
 }
+
+/* Forms */
+.flexFieldSet{
+	display:flex;
+	flex-flow:column wrap;
+	align-items: center;
+	align-content: space-between;
+	background-color: #d0d0d0;
+	margin-top: 1em;
+	padding: 10px;
+	width:30%;
+	height: max-content;
+	margin-bottom: 1em;
+	border: none;
+}
 .flexForm{
 	display:flex;
 	flex-flow:column wrap;
 	align-items: center;
-	width:90%;
+	background-color: #d0d0d0;
+	margin-top: 1em;
+	padding: 10px;
+	width:100%;
 	margin-bottom: 1em;
 }
 .inputGroup{
@@ -139,17 +161,33 @@ a.link:active {
 	justify-content: space-between;
 	align-items: center;
 	margin-top:1em;
-	color: white;
+	color: black;
 	font-weight: bold;
 	width:100%;
 }
 .informs{
-	width:85%;
+	width:80%;
 	height:2em;
 	border:none;
 	border-radius:5px;
 }
 
+inputTextArea{
+	width:100%;
+	border:none;
+}
+
+.submitBtn{
+	display: flex;
+	justify-content: center;
+	height:100%;
+	width:5em;
+	margin-top: 1em;
+	color: #FFFFFF;
+	font-weight: bold;
+	background-color: #2a3c4a;
+	border: none;
+}
 .btnLogin{
 	margin-top:1.3em;
 	border-radius: 10px;
@@ -202,8 +240,6 @@ div.copyright {
 	a.link {
 	display: flex;
 	text-decoration: none;
-	margin-top: 0.5em;
-	margin-bottom: 0.5em;
 	font-weight: bold;
 	}
 
@@ -215,6 +251,14 @@ div.copyright {
 	margin:0.2em;
 	background-color: #2a3c4a;
 	border:none;
+	}
+
+	.menu_extenco{
+		width:80%;
+	}
+
+	.linkBtn{
+		width:5em;
 	}
 }
 /* index.html */
