--- a/core/templates/recuperar_senha.html
+++ b/core/templates/recuperar_senha.html
@@ -18,8 +18,7 @@
         <input id="senha" class="informs" name="senha" type="password" placeholder="Nova Senha" required/>
         <input id="Confirmasenha" class="informs" name="senha" type="password" placeholder="Confirme a Senha" required/>
         
-        <textarea name="Duvida" placeholder="Em caso de Duvida
-        Deixe sua Sugestão aqui!"></textarea>
+        <textarea name="Duvida" placeholder="Em caso de Duvida Deixe sua Sugestão aqui!"></textarea>
         <input type="button" value="ENVIAR" id="boton">
         <input type="button" value="SALVAR" id="boton">
     </form>
