--- a/core/templates/area_professor.html
+++ b/core/templates/area_professor.html
@@ -9,7 +9,7 @@
 {% block title %}Faculdade Impacta - Home{% endblock %}
 
 {% block main %}
-    <section class="areaAluno">
+    <section class="areaProf">
         <div class="listLinks">
             
             <ul class=flexList>
