--- a/core/static/css/site.css
+++ b/core/static/css/site.css
@@ -141,7 +141,7 @@ a.link:active {
 	background-color: #d0d0d0;
 	margin-top: 1em;
 	padding: 10px;
-	width:30%;
+	width:45%;
 	height: max-content;
 	margin-bottom: 1em;
 	border: none;
@@ -326,11 +326,20 @@ h3.comentsAlunos {
 	padding-top:2em;
 }
 .listLinks{
-	width:15em;
-	height:min-content;
-	background-color: lightgray;
-	border-top-right-radius: 2%;
-	border-bottom-right-radius: 2%;
+	display:flex;
+	width:max-content;
+	height: min-content;
+	flex-flow:column wrap;
+	background-color: #9c9c9c;
+	border-top-right-radius: 30px;
+	border-bottom-right-radius: 30px;
+}
+.flexList{
+	display:flex;
+	flex-flow:column wrap;
+	justify-content: space-around;
+	margin:1em;
+	padding: 0px;
 }
 .liLink{
 	list-style: none;
@@ -340,8 +349,13 @@ h3.comentsAlunos {
 	font-weight: bold;
 	text-decoration: none;
 	line-height: 1.4em;
+	margin-right: 0.5em;
+	border-top-right-radius: 30px;
+	border-bottom-right-radius: 30px;
 }
-
+.liLink:hover{
+	background-color: #757575;
+}
 .msgPanel{
 	display: flex;
 	justify-content: center;
@@ -381,8 +395,6 @@ h3.comentsAlunos {
 	height: min-content;
 	flex-flow:column wrap;
 	background-color: #757575;
-	border-top-right-radius: 2%;
-	border-bottom-right-radius: 2%;
 }
 
 .flexList{
@@ -401,9 +413,7 @@ h3.comentsAlunos {
 	text-decoration: none;
 	line-height: 1em;
 }
-.liLink:hover{
-	background-color: #757575;
-}
+
 
 .msgPanel{
 	display: flex;
