--- a/core/static/css/site.css
+++ b/core/static/css/site.css
@@ -14,6 +14,12 @@ html {
 	margin-top:1.1em;
 	width:98%;
 }
+.maxHeight{
+	height:max-content;
+}
+.maxWidth{
+	width:80%;
+}
 li.show{
 	display:block;
 }
@@ -133,6 +139,7 @@ a.link:active {
 }
 
 /* Forms */
+
 .flexFieldSet{
 	display:flex;
 	flex-flow:column wrap;
@@ -140,19 +147,18 @@ a.link:active {
 	align-content: space-between;
 	background-color: #d0d0d0;
 	margin-top: 1em;
-	padding: 10px;
-	width:45%;
+	width:98%;
 	height: max-content;
 	margin-bottom: 1em;
 	border: none;
 }
+
 .flexForm{
 	display:flex;
 	flex-flow:column wrap;
 	align-items: center;
 	background-color: #d0d0d0;
 	margin-top: 1em;
-	padding: 10px;
 	width:100%;
 	margin-bottom: 1em;
 }
@@ -160,29 +166,32 @@ a.link:active {
 	display:flex;
 	justify-content: space-between;
 	align-items: center;
+	align-content: center;
 	margin-top:1em;
+	margin-bottom:1em;
 	color: black;
 	font-weight: bold;
 	width:100%;
 }
 .informs{
-	width:80%;
+	width:95%;
 	height:2em;
 	border:none;
 	border-radius:5px;
 }
 
-inputTextArea{
-	width:100%;
+.inputTextArea{
+	width:90%;
 	border:none;
+	height: 10em;
+	max-width: 900px;
 }
 
 .submitBtn{
 	display: flex;
 	justify-content: center;
-	height:100%;
-	width:5em;
-	margin-top: 1em;
+	height:2em;
+	width:6em;
 	color: #FFFFFF;
 	font-weight: bold;
 	background-color: #2a3c4a;
@@ -358,16 +367,22 @@ h3.comentsAlunos {
 }
 .msgPanel{
 	display: flex;
-	justify-content: center;
-	width:40em;
-	height:30em;
+	flex-flow: column;
+	justify-content: flex-start;
+	width:98%;
+	height:max-content;
+	max-height: 250px;
 	background-color: lightgrey;
-	margin-right: 5em;
 	margin-bottom: 5em;
+	overflow: scroll;
 }
 .msg{
-	width:97%;
-	height: min-content;
+	display:flex;
+	flex-flow:column;
+	width:95%;
+	margin-left: 1em;
+	padding-left: 1em;
+	min-height: min-content;
 	border-bottom: 1px solid black;
 	background-color: white;
 }
@@ -391,7 +406,7 @@ h3.comentsAlunos {
 }
 .listLinks{
 	display:flex;
-	width:min-content;
+	min-width:min-content;
 	height: min-content;
 	flex-flow:column wrap;
 	background-color: #757575;
@@ -431,7 +446,6 @@ h3.comentsAlunos {
 
 .areaProf{
 	display:flex;
-	flex-flow: column nowrap;
 	justify-content: space-between;
 	align-content: flex-start;
 	position:relative;
