--- a/core/templates/area_professor.html
+++ b/core/templates/area_professor.html
@@ -14,10 +14,11 @@
             
             <ul class=flexList>
                 <li class="liLink"><a class="liLink" href="matricula.html">Matrículas</a></li>
-                <li class="liLink"><a class="liLink" href="mensagem.html">Mensagens</a></li>
-                <li class="liLink"><a class="liLink" href="#">Enviar Trabalhos e Exercícios</a></li>
-                <li class="liLink"><a class="liLink" href="#">Receber Trabalhos e Exercícios</a></li>
+                <li class="liLink"><a class="liLink" href="msg_professor.html">Mensagens</a></li>
+                <li class="liLink"><a class="liLink" href="#">Trabalhos</a></li>
+                <li class="liLink"><a class="liLink" href="#">Exercícios</a></li>
             </ul>
         </div>
+        {% block conteudoProf %}{% endblock %}
     </section>
 {% endblock %}
